src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dhP0.5-b-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-window-height { proportion 0.5; }\n    border { on; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 599 × 328, bounds: 1231 × 680, states: []

post-map configures:
size: 599 × 328, bounds: 1231 × 680, states: [Activated]
